--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.52.0",
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
